# api

./: README.md
libraries/csharp/: Kimola.CSharp.SDK.sln  README.md
libraries/csharp/examples/QuickStart/: Program.cs  QuickStart.csproj
libraries/csharp/src/Kimola.Api/: Kimola.Api.csproj  KimolaClient.cs  README.md
libraries/csharp/src/Kimola.Api/Clients/: PresetsClient.cs  QueriesClient.cs  SubscriptionClient.cs
libraries/csharp/src/Kimola.Api/Infrastructure/: KimolaHttpException.cs  QueryStringBuilder.cs
libraries/csharp/src/Kimola.Api/Models/: PredictionResult.cs  Preset.cs  Queries.cs  Subscription.cs
libraries/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
libraries/nodejs/examples/: quick.ts
libraries/nodejs/src/: index.ts
libraries/python/: pyproject.toml
libraries/python/examples/: quickstart.py
libraries/python/kimola_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
