[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimola-sdk"
version = "0.2.0"
description = "Kimola API Python SDK — simple client aligned to official endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "pydantic>=2.6"]
